editing and deleting the posts

--- a/templates/base.html
+++ b/templates/base.html
@@ -14,5 +14,8 @@
         {% block content %}
         {% endblock content %}
     </div>
+    <footer>
+        <h2><a href="{% url 'post_new' %}">Writing new Post</a></h2>
+    </footer>
 </body>
 </html>
